# app/Http/Controllers/Utilisateur/UtilisateurController.php
@@ -30,7 +30,6 @@ class UtilisateurController extends Controller
  */
     public function index() { 
         try {
-            //code...
             $proprietaire =  Utilisateur::with('typeUser')->whereHas('typeUser', function ($query) {
                 $query->where('libelle', 'Proprietaire') ;
             })->get();
@@ -44,7 +43,7 @@ class UtilisateurController extends Controller
                 'statusCode' => 500,
                 'message' => 'un probleme est survenu ',
                 'error' => $e->getMessage()
-            ]);
+            ],500);
         }
     }
  /**
@@ -66,12 +65,11 @@ class UtilisateurController extends Controller
  *         @OA\JsonContent(
  *             required={"email"},
  *             @OA\Property(property="email", type="string"),
+ *             @OA\Property(property="nom", type="string" ,example="djeudje tenkeu"),
  *             @OA\Property(property="telephone", type="string"),
- *             @OA\Property(property="type_user_id", type="string"),
- *             @OA\Property(property="slug", type="string"),
  *             @OA\Property(property="addresse", type="string"),
  *             @OA\Property(property="password", type="string"),
- *             @OA\Property(property="statut", type="string"),
+ *             @OA\Property(property="sexe", type="string" ,example="Masculin"),
  *         )
  *     ),
  *     @OA\Response(response="200", description="User updated"),
@@ -91,9 +89,6 @@ class UtilisateurController extends Controller
                 'telephone' => 'required|string',
                 'addresse' => 'required|string',
                 'sexe' => 'required|string',
-                'login' => 'required|string',
-                'statut' => 'required|string',
-                'slug' => 'required|string',
                 // 'type_user_id' => 'required|exists:type_users,id'
             ])  ;
              
@@ -111,26 +106,26 @@ class UtilisateurController extends Controller
                 return response()->json([
                     'statusCode' => 200,
                     'message' => "utilisateurs mis a jour  success",
-                    'data' => $utilisateurUpdate
-                ]);
+                    'data' => $utilisateurId
+                ],200);
               }else{
                 return response()->json([
                     'statusCode' => 204,
                     'message' => "utilisateurs na pas ete  mis a jour"
-                ]);
+                ] ,204);
               }
            }catch (Exception $e) {
             return response()->json([
                 'statusCode' => 500,
                 'message' => 'un probleme est survenu ',
                 'error' => $e->getMessage()
-            ]);
+            ] ,500);
         }
         }else{
             return response()->json([
                 'statusCode' => 404,
                 'message' => 'nous n\'avons pas trouver utilisateur avec cette id',
-            ]);
+            ] ,404);
         }
     }
           /** 
@@ -146,9 +141,8 @@ class UtilisateurController extends Controller
         *             @OA\Property(property="password", type="string") ,
         *             @OA\Property(property="nom", type="string") ,
         *             @OA\Property(property="sexe", type="string") ,
-        *             @OA\Property(property="login", type="string") ,
-        *             @OA\Property(property="slug", type="string") ,
-        *             @OA\Property(property="statut", type="string") ,
+        *             @OA\Property(property="telephone", type="string") ,
+        *             @OA\Property(property="addresse", type="string") ,
         *         )
         *     ),
         *     @OA\Response(response="201", description="utilisateurs created"),
@@ -164,18 +158,15 @@ class UtilisateurController extends Controller
             'telephone' => 'required|string',
             'addresse' => 'required|string',
             'sexe' => 'required|string',
-            'login' => 'required|string',
-            'statut' => 'required|string',
-            'slug' => 'required|string',
             // 'type_user_id' => 'required|exists:type_users,id'
         ])  ;
          
         if($validator->fails()){
             return response()->json([
-                'statusCode' => 203,
+                'statusCode' => 422,
                 'message' => ' probleme de validation de donnee',
                 'error' => $validator->errors()
-            ]);
+            ],422);
 
         }
         try {
@@ -184,13 +175,12 @@ class UtilisateurController extends Controller
             $newUtilisateur->email =$request->email ;
             $newUtilisateur->nom =$request->nom ;
             $newUtilisateur->telephone =$request->telephone ;
-            $newUtilisateur->adresse =$request->adresse ;
-            $newUtilisateur->slug =$request->slug ;
-            $newUtilisateur->type_user_id = $typeUser->id;
-            $newUtilisateur->login = $request->login ;
+            $newUtilisateur->addresse =$request->addresse ;
+            $newUtilisateur->type_user = $typeUser->id;
+            $newUtilisateur->login = $request->email ;
             $newUtilisateur->sexe = $request->sexe ;
-            $newUtilisateur->slug = $request->slug ;
-            $newUtilisateur->statut = $request->statut ;
+            $newUtilisateur->slug = $request->nom ;
+            $newUtilisateur->statut = 'actif';
             $newUtilisateur->deleted_at =  new Carbon();
             $newUtilisateur->password = Hash::make($request->password) ;
             
@@ -200,7 +190,7 @@ class UtilisateurController extends Controller
                     'statusCode' => 200,
                     'message' => "utilisateur creer avec success",
                     'data' => $newUtilisateur
-                ]);
+                ] ,200);
             } else {
                 return response()->json([
                     'statusCode' => 203,
@@ -242,19 +232,19 @@ class UtilisateurController extends Controller
                 'statusCode'=>203,
                     'message'=>" proprietaire  recuperer en particulier  avec success", 
                     'data'=>$utilisateurId
-            ]) ;
+            ],203) ;
         }else{
             return   response()->json( [
-                'statusCode'=>203,
+                'statusCode'=>404,
                     'message'=>"nous n'avons pas trouver de proprietaire  avec l'identifiant unique passer", 
-            ]) ;
+            ] ,404) ;
         }
         } catch (Exception $e) {
             return response()->json([
                 'statusCode' => 500,
                 'message' => 'un probleme est survenu ',
                 'error' => $e->getMessage()
-            ]);
+            ] ,500);
         }
 
     }
@@ -284,11 +274,11 @@ public function deleteUtilisateur(string $id)
         return response()->json([
             'message'=>"utilisateurs suprimer avec succcess" ,
             "statusCode"=>203
-        ]) ;
+        ],203) ;
     }
     return response()->json([
         'message'=>"nous n'avons pas trouver de utilisateurs avec cette id" ,
         "statusCode"=>404
-    ]) ;
+    ] ,404) ;
 }
 }
